--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack",
-    "serve": "webpack serve",    
-    "start": "webpack-dev-server --open"
+    "start": "webpack serve --open"    
   },
   "keywords": [],
   "author": "",
