--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,24 @@
+# Default
+.gulp
+.idea
+.vscode
+
+# Node
+node_modules
+
+# Dist & tests
+dist
+
+# Logs:
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Special
+Thumbs.db
+.DS_Store*
+
 #Junk
 .DS_Store
 .vscode/
@@ -107,3 +128,4 @@ dist
 
 # TernJS port file
 .tern-port
+
